--- a/app/src/main/res/drawable-v21/icon_colored_home_health_stats.xml
+++ b/app/src/main/res/drawable-v21/icon_colored_home_health_stats.xml
@@ -1,20 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector android:height="80.0dip" android:width="80.0dip" android:viewportWidth="50.0" android:viewportHeight="50.0"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000" android:pathData="M27.4,32.9L35.5,32.9" android:strokeColor="#ffe03843" android:strokeWidth="1.0" android:strokeLineCap="round" />
-    <path android:fillColor="#00000000" android:pathData="M37.9,32.9L39.9,32.9" android:strokeColor="#ffe03843" android:strokeWidth="1.0" android:strokeLineCap="round" />
-    <path android:fillColor="#00000000" android:pathData="M23.3,38.7L29,38.7" android:strokeColor="#ffe03843" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.2" android:fillAlpha="0.2" />
-    <path android:fillColor="#00000000" android:pathData="M35.9,38.7L41.6,38.7" android:strokeColor="#ffe03843" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.2" android:fillAlpha="0.2" />
-    <path android:fillColor="#00000000" android:pathData="M31.5,38.7L33.4,38.7" android:strokeColor="#ffe03843" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.2" android:fillAlpha="0.2" />
-    <path android:fillColor="#00000000" android:pathData="M25.4,35.8L31.9,35.8" android:strokeColor="#ffe03843" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.5" android:fillAlpha="0.5" />
-    <path android:fillColor="#00000000" android:pathData="M34.4,35.8L42,35.8" android:strokeColor="#ffe03843" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.5" android:fillAlpha="0.5" />
-    <path android:fillColor="#ffe03943" android:pathData="M31.3,15.8c-0.6,-0.3 -1.3,-0.4 -1.9,-0.4c-3.1,0 -5.5,3.4 -5.5,3.5l-0.8,1.2l-0.8,-1.2c0,0 -2.4,-3.5 -5.5,-3.5c-0.6,0 -1.3,0.1 -1.9,0.4c-2,0.9 -3.4,2.5 -4,4.6c-0.8,2.6 -0.2,5.7 1.7,8.7c3.3,5.2 8.9,9 10.5,10.1c1.7,-1.1 7.3,-4.9 10.5,-10.1c1.9,-3 2.5,-6.1 1.7,-8.7C34.8,18.4 33.3,16.7 31.3,15.8z" android:strokeColor="#ff000000" android:strokeWidth="1.0" />
-    <path android:fillColor="#ffffffff" android:pathData="M32.5,13.4l-3.6,1l-0.3,3.3l0.1,3.2l4.3,3.6l9.3,0.7l1.7,-6.6l-5.7,-3.5z" />
-    <path android:fillColor="#00000000" android:pathData="M40.7,18.1l-2.8,0l-2,3.3l-2.6,-5.8l-1.1,2.5l-4,0" android:strokeColor="#ffe03843" android:strokeWidth="1.0" />
-    <path android:fillColor="#00000000" android:pathData="M34.5,18.1m-6.3,0a6.3,6.3 0,1 1,12.6 0a6.3,6.3 0,1 1,-12.6 0" android:strokeColor="#ff000000" android:strokeWidth="1.0" />
-    <path android:fillColor="#00000000" android:pathData="M16.5,18.1c0,0 -7.2,4 -0.8,10.7" android:strokeColor="#ffffffff" android:strokeWidth="1.0" android:strokeLineCap="round" />
-    <path android:fillColor="#00000000" android:pathData="M10.9,8.8L10.9,9.5" android:strokeColor="#ff000000" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.3" android:fillAlpha="0.3" />
-    <path android:fillColor="#00000000" android:pathData="M10.9,11.7L10.9,12.4" android:strokeColor="#ff000000" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.3" android:fillAlpha="0.3" />
-    <path android:fillColor="#00000000" android:pathData="M12.7,10.6L12,10.6" android:strokeColor="#ff000000" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.3" android:fillAlpha="0.3" />
-    <path android:fillColor="#00000000" android:pathData="M9.8,10.6L9.1,10.6" android:strokeColor="#ff000000" android:strokeWidth="1.0" android:strokeLineCap="round" android:strokeAlpha="0.3" android:fillAlpha="0.3" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="80.0dip"
+    android:height="80.0dip"
+    android:viewportHeight="50.0"
+    android:viewportWidth="50.0">
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M27.4,32.9L35.5,32.9"
+        android:strokeColor="#050505"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M37.9,32.9L39.9,32.9"
+        android:strokeColor="#030303"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.2"
+        android:fillColor="#00000000"
+        android:pathData="M23.3,38.7L29,38.7"
+        android:strokeAlpha="0.2"
+        android:strokeColor="#121111"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.2"
+        android:fillColor="#00000000"
+        android:pathData="M35.9,38.7L41.6,38.7"
+        android:strokeAlpha="0.2"
+        android:strokeColor="#101010"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.2"
+        android:fillColor="#00000000"
+        android:pathData="M31.5,38.7L33.4,38.7"
+        android:strokeAlpha="0.2"
+        android:strokeColor="#0e0e0e"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.5"
+        android:fillColor="#00000000"
+        android:pathData="M25.4,35.8L31.9,35.8"
+        android:strokeAlpha="0.5"
+        android:strokeColor="#121111"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.5"
+        android:fillColor="#00000000"
+        android:pathData="M34.4,35.8L42,35.8"
+        android:strokeAlpha="0.5"
+        android:strokeColor="#060606"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillColor="#ffe03943"
+        android:pathData="M31.3,15.8c-0.6,-0.3 -1.3,-0.4 -1.9,-0.4c-3.1,0 -5.5,3.4 -5.5,3.5l-0.8,1.2l-0.8,-1.2c0,0 -2.4,-3.5 -5.5,-3.5c-0.6,0 -1.3,0.1 -1.9,0.4c-2,0.9 -3.4,2.5 -4,4.6c-0.8,2.6 -0.2,5.7 1.7,8.7c3.3,5.2 8.9,9 10.5,10.1c1.7,-1.1 7.3,-4.9 10.5,-10.1c1.9,-3 2.5,-6.1 1.7,-8.7C34.8,18.4 33.3,16.7 31.3,15.8z"
+        android:strokeColor="#ff000000"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M32.5,13.4l-3.6,1l-0.3,3.3l0.1,3.2l4.3,3.6l9.3,0.7l1.7,-6.6l-5.7,-3.5z" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M40.7,18.1l-2.8,0l-2,3.3l-2.6,-5.8l-1.1,2.5l-4,0"
+        android:strokeColor="#ffe03843"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M34.5,18.1m-6.3,0a6.3,6.3 0,1 1,12.6 0a6.3,6.3 0,1 1,-12.6 0"
+        android:strokeColor="#ff000000"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M16.5,18.1c0,0 -7.2,4 -0.8,10.7"
+        android:strokeColor="#080808"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="#00000000"
+        android:pathData="M10.9,8.8L10.9,9.5"
+        android:strokeAlpha="0.3"
+        android:strokeColor="#701717"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="#00000000"
+        android:pathData="M10.9,11.7L10.9,12.4"
+        android:strokeAlpha="0.3"
+        android:strokeColor="#701717"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="#00000000"
+        android:pathData="M12.7,10.6L12,10.6"
+        android:strokeAlpha="0.3"
+        android:strokeColor="#701717"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
+    <path
+        android:fillAlpha="0.3"
+        android:fillColor="#00000000"
+        android:pathData="M9.8,10.6L9.1,10.6"
+        android:strokeAlpha="0.3"
+        android:strokeColor="#701717"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.0" />
 </vector>
