--- a/app/src/main/res/layout/activity_medicine_preview.xml
+++ b/app/src/main/res/layout/activity_medicine_preview.xml
@@ -12,7 +12,7 @@
         theme="@style/MyToolbarStyle"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#204ea4"
+        android:background="#336fcf"
         app:popupTheme="@style/Theme.AppCompat.NoActionBar">
 
         <LinearLayout
