add email in emergency contact

--- a/app/src/main/res/drawable-v21/icon_navigation_medicine_library.xml
+++ b/app/src/main/res/drawable-v21/icon_navigation_medicine_library.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector android:height="24.0dip" android:width="24.0dip" android:viewportWidth="24.0" android:viewportHeight="24.0"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ff000000" android:pathData="M11.85,12.21a1.29,1.29 0,0 1,-0.66 -0.19L4.2,8a0.31,0.31 0,0 1,0.31 -0.54l7,4.06a0.55,0.55 0,0 0,0.59 0l7.08,-4.08a0.31,0.31 0,0 1,0.31 0.54L12.44,12A1,1 0,0 1,11.85 12.21Z" />
-    <path android:fillColor="#ff000000" android:pathData="M11.85,21a0.31,0.31 0,0 1,-0.31 -0.31V12a0.31,0.31 0,0 1,0.62 0v8.67A0.31,0.31 0,0 1,11.85 21Z" />
-    <path android:fillColor="#ff000000" android:pathData="M11.85,3.45a0.56,0.56 0,0 1,0.31 0.06l6.86,4a0.66,0.66 0,0 1,0.31 0.56V16a0.66,0.66 0,0 1,-0.31 0.56l-6.86,4a0.81,0.81 0,0 1,-0.62 0l-6.86,-4A0.66,0.66 0,0 1,4.36 16V8.07a0.66,0.66 0,0 1,0.31 -0.56l6.86,-4c0.12,0 0.19,-0.06 0.31,-0.06m0,-0.62a1.05,1.05 0,0 0,-0.62 0.19L4.36,7a1.29,1.29 0,0 0,-0.62 1.06V16a1.21,1.21 0,0 0,0.62 1.06l6.86,4a1.13,1.13 0,0 0,1.25 0l6.86,-4A1.29,1.29 0,0 0,20 16V8.07A1.21,1.21 0,0 0,19.33 7L12.47,3a1.05,1.05 0,0 0,-0.62 -0.19Z" />
-    <path android:fillColor="#ff000000" android:pathData="M4.36,7.7 L4,16.37l7.8,4.43L11.8,12ZM9.89,15.50a0.31,0.31 0,0 1,-0.43 0.12l-1.65,-0.95v1.93a0.31,0.31 0,1 1,-0.62 0L7.19,14.4l-2,-1.13a0.31,0.31 0,0 1,0.31 -0.54l1.65,0.95L7.15,11.75a0.31,0.31 0,1 1,0.62 0L7.77,14l2,1.13A0.31,0.31 0,0 1,10 15.11Z" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24.0dip"
+    android:height="24.0dip"
+    android:viewportHeight="24.0"
+    android:viewportWidth="24.0">
+    <path
+        android:fillColor="#ff000000"
+        android:pathData="M11.85,12.21a1.29,1.29 0,0 1,-0.66 -0.19L4.2,8a0.31,0.31 0,0 1,0.31 -0.54l7,4.06a0.55,0.55 0,0 0,0.59 0l7.08,-4.08a0.31,0.31 0,0 1,0.31 0.54L12.44,12A1,1 0,0 1,11.85 12.21Z" />
+    <path
+        android:fillColor="#ff000000"
+        android:pathData="M11.85,21a0.31,0.31 0,0 1,-0.31 -0.31V12a0.31,0.31 0,0 1,0.62 0v8.67A0.31,0.31 0,0 1,11.85 21Z" />
+    <path
+        android:fillColor="#ff000000"
+        android:pathData="M11.85,3.45a0.56,0.56 0,0 1,0.31 0.06l6.86,4a0.66,0.66 0,0 1,0.31 0.56V16a0.66,0.66 0,0 1,-0.31 0.56l-6.86,4a0.81,0.81 0,0 1,-0.62 0l-6.86,-4A0.66,0.66 0,0 1,4.36 16V8.07a0.66,0.66 0,0 1,0.31 -0.56l6.86,-4c0.12,0 0.19,-0.06 0.31,-0.06m0,-0.62a1.05,1.05 0,0 0,-0.62 0.19L4.36,7a1.29,1.29 0,0 0,-0.62 1.06V16a1.21,1.21 0,0 0,0.62 1.06l6.86,4a1.13,1.13 0,0 0,1.25 0l6.86,-4A1.29,1.29 0,0 0,20 16V8.07A1.21,1.21 0,0 0,19.33 7L12.47,3a1.05,1.05 0,0 0,-0.62 -0.19Z" />
+    <path
+        android:fillColor="#ff000000"
+        android:pathData="M4.36,7.7 L4,16.37l7.8,4.43L11.8,12ZM9.89,15.50a0.31,0.31 0,0 1,-0.43 0.12l-1.65,-0.95v1.93a0.31,0.31 0,1 1,-0.62 0L7.19,14.4l-2,-1.13a0.31,0.31 0,0 1,0.31 -0.54l1.65,0.95L7.15,11.75a0.31,0.31 0,1 1,0.62 0L7.77,14l2,1.13A0.31,0.31 0,0 1,10 15.11Z" />
 </vector>
