update diary issue problem solved

--- a/app/src/main/res/layout/activity_mymedicines.xml
+++ b/app/src/main/res/layout/activity_mymedicines.xml
@@ -12,8 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_collapseMode="pin"
-        android:background="?attr/colorPrimary"
+        android:background="#336fcf"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     </android.support.v7.widget.Toolbar>
+
+
 
 </android.support.constraint.ConstraintLayout>
