--- a/app/src/main/res/layout/medicine_dashboard_rv.xml
+++ b/app/src/main/res/layout/medicine_dashboard_rv.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
@@ -8,6 +9,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:layout_marginTop="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -59,7 +61,6 @@
 
                 <TextView
                     android:id="@+id/DeleteTV"
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
