--- a/app/src/main/res/layout/activity_my_diary.xml
+++ b/app/src/main/res/layout/activity_my_diary.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    android:id="@id/main_layout"
-    android:background="@color/white"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@id/main_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:id="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         android:background="#336fcf"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:minHeight="?actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         card_view:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_marginRight="16.0dip"
-        android:onClick="clickBack"
-        android:src="@drawable/ic_action_navigation_arrow_back"
-        android:tint="@color/white" />
-        <TextView
-            android:textSize="18.0sp"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:id="@id/headerMyDiary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Diary"  />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="clickBack"
+                android:src="@drawable/ic_action_navigation_arrow_back"
+                android:tint="@color/white" />
+
+            <TextView
+                android:id="@id/headerMyDiary"
+                android:layout_weight="10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16.1dp"
+                android:text="  My Diary"
+                android:textColor="@color/white"
+                android:textSize="19.0sp" />
+        </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/DiaryRV"
@@ -49,54 +56,55 @@
         </android.support.v7.widget.RecyclerView>
 
         <LinearLayout
-            android:gravity="center"
-            android:orientation="vertical"
             android:id="@id/linearLayoutNoDiary"
-            android:background="@color/white"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.0">
+            android:layout_weight="1.0"
+            android:background="@color/white"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@id/imageViewNavItemIcon"
                 android:layout_width="150.0dip"
                 android:layout_height="150.0dip"
-                android:layout_margin="16.0dip"
-                android:src="@drawable/image_zero_case_diary"
                 android:layout_alignTop="@id/imageView4"
                 android:layout_centerHorizontal="true"
+                android:layout_margin="16.0dip"
+                android:src="@drawable/image_zero_case_diary"
                 app:civ_border_color="#ffeeeeee"
-                app:civ_border_width="4.0dip"
-                xmlns:app="http://schemas.android.com/apk/res-auto" />
+                app:civ_border_width="4.0dip" />
 
             <TextView
-                android:textSize="18.0sp"
-                android:textColor="@color/fiftyFivePercentOpaqueBlack"
-                android:gravity="center"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="100.0dip"
                 android:layout_marginRight="100.0dip"
-                android:text="You Haven’t Added Any Entry Yet" />
+                android:gravity="center"
+                android:text="You Haven’t Added Any Entry Yet"
+                android:textColor="@color/fiftyFivePercentOpaqueBlack"
+                android:textSize="18.0sp" />
         </LinearLayout>
+
         <android.support.v7.widget.CardView
-            android:background="#fffefefe"
             android:layout_width="fill_parent"
             android:layout_height="64.0dip"
+            android:background="#fffefefe"
             card_view:cardCornerRadius="6.0dip"
             card_view:cardElevation="12.0dip"
             card_view:cardUseCompatPadding="false">
+
             <LinearLayout
-                android:onClick="goToAddDiaryActivity"
-                android:gravity="center"
-                android:layout_gravity="bottom"
-                android:orientation="horizontal"
                 android:id="@id/linearLayoutAddDiary"
-                android:background="@drawable/background_button"
-                android:padding="12.0dip"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8.0dip">
+                android:layout_gravity="bottom"
+                android:layout_margin="8.0dip"
+                android:background="@drawable/background_button"
+                android:gravity="center"
+                android:onClick="goToAddDiaryActivity"
+                android:orientation="horizontal"
+                android:padding="12.0dip">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -105,16 +113,15 @@
                     android:tint="@color/white" />
 
                 <TextView
-                    android:textSize="16.0sp"
-                    android:textColor="@color/white"
-                    android:gravity="center"
                     android:id="@id/textViewDiaryEntries"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12.0dip"
+                    android:gravity="center"
                     android:text="ADD ENTRY"
                     android:textAllCaps="true"
-                    />
+                    android:textColor="@color/white"
+                    android:textSize="16.0sp" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
