--- a/app/src/main/res/layout/schedule_recyclerview.xml
+++ b/app/src/main/res/layout/schedule_recyclerview.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
-android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp"
-    android:layout_height="wrap_content">
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -19,17 +19,15 @@ android:layout_marginRight="10dp"
 
 
         <TextView
-            android:gravity="center"
-            android:textColor="#000000"
-android:textSize="16sp"
-
-            android:text="Pick a time"
             android:id="@+id/PickTimeTV"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:background="#57bfe1"
-           />
+            android:gravity="center"
+            android:text="Pick a time"
+            android:textColor="#000000"
+            android:textSize="16sp" />
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
