--- a/app/src/main/res/drawable-v21/image_mobile_emergency_contacts.xml
+++ b/app/src/main/res/drawable-v21/image_mobile_emergency_contacts.xml
@@ -1,26 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector android:height="150.0dip" android:width="150.0dip" android:viewportWidth="150.0" android:viewportHeight="150.0"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffffff"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="150.0dip"
+    android:height="150.0dip"
+    android:viewportHeight="150.0"
+    android:viewportWidth="150.0">
+    <path
+        android:fillColor="#bfbaba"
         android:pathData="M75,75m-75,0a75,75 0,1 1,150 0a75,75 0,1 1,-150 0" />
-    <path android:fillColor="#0b0b0b"
+    <path
+        android:fillColor="#0b0b0b"
         android:pathData="M79.9,28.4c-7,0 -14,0 -21,0c-4.4,0 -7.9,3.3 -7.9,7.5l-0.1,78.3c0,4.1 3.5,7.5 7.9,7.5l22,0V28.4C80.5,28.4 80.2,28.4 79.9,28.4z" />
-    <path android:fillColor="#0b0b0b"
+    <path
+        android:fillColor="#0b0b0b"
         android:pathData="M91.2,28.5c-3.5,-0.5 -7.4,-0.2 -10.3,-0.2v93.3l10.2,0c3.1,0 5.8,-1.7 7.1,-4.1c0.6,-1 0.9,-2.2 0.9,-3.4c0,0 0.1,-78.1 0.1,-78.3C99.1,31 95.5,29.2 91.2,28.5z" />
-    <path android:fillColor="#ffffffff" android:pathData="M68.7,33.6c0,0.6 0.5,1.1 1,1.1l10,0c0.6,0 1,-0.5 1,-1.1l0,0c0,-0.6 -0.5,-1.1 -1,-1.1l-10,0C69.2,32.5 68.7,33 68.7,33.6L68.7,33.6z" />
-    <path android:fillColor="#ffffffff" android:pathData="M88.4,34.9a1.1,1.1 46.1,1 0,0 -2.2a1.1,1.1 46.1,1 0,-0 2.2z" />
-    <path android:fillColor="#ffb1b6ba" android:pathData="M54.28,111.6l0.1,-73.3l43,0.06l-0.1,73.3z" android:strokeAlpha="0.4" android:fillAlpha="0.4" />
-    <path android:fillColor="#ffffffff" android:pathData="M53.46,110.96l0.1,-73.3l43,0.06l-0.1,73.3z" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M68.7,33.6c0,0.6 0.5,1.1 1,1.1l10,0c0.6,0 1,-0.5 1,-1.1l0,0c0,-0.6 -0.5,-1.1 -1,-1.1l-10,0C69.2,32.5 68.7,33 68.7,33.6L68.7,33.6z" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M88.4,34.9a1.1,1.1 46.1,1 0,0 -2.2a1.1,1.1 46.1,1 0,-0 2.2z" />
+    <path
+        android:fillAlpha="0.4"
+        android:fillColor="#ffb1b6ba"
+        android:pathData="M54.28,111.6l0.1,-73.3l43,0.06l-0.1,73.3z"
+        android:strokeAlpha="0.4" />
+    <path
+        android:fillColor="#ffffffff"
+        android:pathData="M53.46,110.96l0.1,-73.3l43,0.06l-0.1,73.3z" />
 
     //round button
     <path
         android:fillColor="#f5f4f4"
         android:pathData="M75.6,116.2m-3.8,0a3.8,3.8 0,1 1,7.6 0a3.8,3.8 0,1 1,-7.6 0" />
-    <path android:fillColor="#ff000000" android:pathData="M77.3,63.7c-6.5,0 -11.8,5.3 -11.8,11.8c0,2.2 0.6,4.2 1.6,6l-1.6,5.8l5.9,-1.6c1.7,1 3.7,1.6 5.8,1.6c6.5,0 11.8,-5.3 11.8,-11.8C89.1,68.9 83.8,63.7 77.3,63.7z" android:strokeAlpha="0.2" android:fillAlpha="0.2" />
+    <path
+        android:fillAlpha="0.2"
+        android:fillColor="#ff000000"
+        android:pathData="M77.3,63.7c-6.5,0 -11.8,5.3 -11.8,11.8c0,2.2 0.6,4.2 1.6,6l-1.6,5.8l5.9,-1.6c1.7,1 3.7,1.6 5.8,1.6c6.5,0 11.8,-5.3 11.8,-11.8C89.1,68.9 83.8,63.7 77.3,63.7z"
+        android:strokeAlpha="0.2" />
 
     //round inside
-    <path android:fillColor="#b42733" android:pathData="M76.8,63.2c-6.5,0 -11.8,5.3 -11.8,11.8c0,2.2 0.6,4.2 1.6,6l-1.6,5.8l5.9,-1.6c1.7,1 3.7,1.6 5.8,1.6c6.5,0 11.8,-5.3 11.8,-11.8C88.6,68.5 83.3,63.2 76.8,63.2z" />
-    <path android:fillColor="#ffffffff"
+    <path
+        android:fillColor="#b42733"
+        android:pathData="M76.8,63.2c-6.5,0 -11.8,5.3 -11.8,11.8c0,2.2 0.6,4.2 1.6,6l-1.6,5.8l5.9,-1.6c1.7,1 3.7,1.6 5.8,1.6c6.5,0 11.8,-5.3 11.8,-11.8C88.6,68.5 83.3,63.2 76.8,63.2z" />
+    <path
+        android:fillColor="#ffffffff"
         android:pathData="M79.2,74.6l-2.4,2.4l-2.4,-2.4c-1.4,0.7 -2.3,2 -2.3,3.4v1.9h9.4V78C81.5,76.5 80.6,75.2 79.2,74.6z" />
     <path
         android:fillColor="#ffffffff"
