--- a/app/src/main/res/layout/activity_emergencycontacts.xml
+++ b/app/src/main/res/layout/activity_emergencycontacts.xml
@@ -69,7 +69,7 @@
                 android:src="@drawable/image_mobile_emergency_contacts"
                 android:layout_alignTop="@id/imageView4"
                 android:layout_centerHorizontal="true"
-                app:civ_border_color="#c9c4c4"
+                app:civ_border_color="#ffeeeeee"
                 app:civ_border_width="4.0dip"
                 xmlns:app="http://schemas.android.com/apk/res-auto" />
 
