--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E2D7D7"
+    android:background="#f4f4f4"
     tools:context=".Splash">
+
 
     <TextView
         android:id="@+id/tc"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="70sp"
         android:background="@drawable/splash"
-        android:textColor="#0a0909"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
