--- a/app/src/main/res/layout/activity_parentslogin.xml
+++ b/app/src/main/res/layout/activity_parentslogin.xml
@@ -7,10 +7,6 @@
     android:layout_height="match_parent"
     android:background="#eef1f2"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="6"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Parentslogin">
@@ -18,11 +14,11 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
-        android:layout_height="59sp"
-        android:background="#0d1e8c"
+        android:layout_height="wrap_content"
+        android:background="#336fcf"
         app:layout_collapseMode="pin"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:titleTextColor="#50dcd0">
+        app:titleTextColor="#f3f7f7">
 
     </android.support.v7.widget.Toolbar>
 
@@ -101,11 +97,12 @@
                 android:weightSum="3.0">
 
                 <EditText
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
                     android:textColor="#000"
                     android:id="@+id/field_phone_number"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.6"
                     android:drawableLeft="@drawable/ic_phone_black_24dp"
                     android:drawablePadding="7dp"
                     android:hint="@string/hint_phone_number"
@@ -113,18 +110,19 @@
                     android:textColorHint="#7e2c3f"
                     android:theme="@style/ThemeOverlay.MyLightEditText" />
 
-                <EditText
-                    android:textColor="#000"
-                    android:id="@+id/field_verification_code"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.4"
-                    android:hint="@string/hint_verification_code"
-                    android:inputType="number"
-                    android:textColorHint="#7e2c3f"
-                    android:theme="@style/ThemeOverlay.MyLightEditText" />
 
             </LinearLayout>
+            <EditText
+                android:layout_marginLeft="105.0dip"
+                android:textColor="#000"
+                android:id="@+id/field_verification_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/hint_verification_code"
+                android:inputType="number"
+                android:textColorHint="#7e2c3f"
+                android:theme="@style/ThemeOverlay.MyLightEditText" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
