--- a/app/src/main/res/layout/activity_medicine_library.xml
+++ b/app/src/main/res/layout/activity_medicine_library.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_collapseMode="pin"
-        android:background="?attr/colorPrimary"
+        android:background="#336fcf"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     </android.support.v7.widget.Toolbar>
 
