--- a/app/src/main/res/layout/activity_selectmode.xml
+++ b/app/src/main/res/layout/activity_selectmode.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/se"
+    android:background="#FFE6E7E8"
     tools:context=".Selectmode">
 
     <android.support.v7.widget.Toolbar
