--- a/app/src/main/res/layout/doctor_information.xml
+++ b/app/src/main/res/layout/doctor_information.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
+    android:gravity="center_vertical"
     android:orientation="vertical">
 
 
     <android.support.v7.widget.CardView
         android:layout_width="fill_parent"
-        android:layout_height="130.0dip"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="#fffefefe"
         card_view:cardCornerRadius="6.0dip"
@@ -20,7 +21,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#fff"
             android:orientation="horizontal">
 
@@ -32,38 +33,62 @@
                 android:layout_weight="10"
                 android:orientation="vertical">
 
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@id/imageViewAvatar"
+                    android:layout_width="40.0dip"
+                    android:layout_height="40.0dip"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="12.0dip"
+                    android:src="@drawable/doctor_avatar_male"
+                    app:civ_border_width="0.0dip"
+                    app:civ_fill_color="#ff979797" />
+
                 <TextView
                     android:id="@+id/DoctorNameTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="7dp"
                     android:text="Cpp"
+                    android:textStyle="bold"
                     android:textColor="#000"
-                    android:textSize="25sp" />
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/DoctorspecialityTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_toRightOf="@+id/imageViewAvatar"
+                    android:text="Nurology"
+                    android:textStyle="bold"
+                    android:textColor="#000"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/DoctorNumberTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="3dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="4dp"
                     android:text="01753740230"
                     android:textColor="#000"
-                    android:textSize="20sp" />
+                    android:textSize="17sp" />
 
                 <TextView
                     android:id="@+id/DoctorEmailTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="3dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_toRightOf="@+id/imageViewAvatar"
                     android:text="colliensepodder25@gmail.com"
                     android:textColor="#000"
-                    android:textSize="20sp" />
-
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -75,7 +100,6 @@
                 android:drawableLeft="@drawable/ic_edit_black_24dp"
                 android:gravity="center"
                 android:paddingLeft="20dp" />
-
             <TextView
                 android:id="@+id/dotssaa"
                 android:layout_width="0dp"
@@ -84,6 +108,8 @@
                 android:drawableLeft="@drawable/ic_delete_black_24dp"
                 android:gravity="center"
                 android:paddingLeft="20dp" />
+
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
