--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,12 @@
     <color name="colorPrimaryDark">#7b86ca</color>
     <color name="colorAccent">#5d99ca</color>
 
+    <color name="redDeep">#bf3139</color>
+    <color name="redLight">#de2d38</color>
+    <color name="textBlack">#ff000000</color>
+    <color name="textWhite">#fffafafa</color>
+    <color name="white">#ffffffff</color>
+    <color name="offwhite">#f4f2f2</color>
     <color name="colorPrimary1">#8892cc</color>
     <color name="WHITE">#FFFFFF</color>
     <color name="lightBlue">#5778e1</color>
@@ -20,18 +26,6 @@
 
 
 
-    <color name="abc_input_method_navigation_guard">@android:color/black</color>
-    <color name="abc_search_url_text_normal">#ff7fa87f</color>
-    <color name="abc_search_url_text_pressed">@android:color/black</color>
-    <color name="abc_search_url_text_selected">@android:color/black</color>
-    <color name="accent_material_dark">@color/material_deep_teal_200</color>
-    <color name="accent_material_light">@color/material_deep_teal_500</color>
-    <color name="background_floating_material_dark">@color/material_grey_800</color>
-    <color name="background_floating_material_light">@android:color/white</color>
-    <color name="background_material_dark">@color/material_grey_850</color>
-    <color name="background_material_light">@color/material_grey_50</color>
-    <color name="bright_foreground_disabled_material_dark">#80ffffff</color>
-    <color name="bright_foreground_disabled_material_light">#80000000</color>
     <color name="bright_foreground_inverse_material_dark">@color/bright_foreground_material_light</color>
     <color name="bright_foreground_inverse_material_light">@color/bright_foreground_material_dark</color>
     <color name="bright_foreground_material_dark">@android:color/white</color>
@@ -79,7 +73,6 @@
     <color name="notification_action_color_filter">#ffffffff</color>
     <color name="notification_icon_bg_color">#ff9e9e9e</color>
     <color name="notification_material_background_media_default_color">#ff424242</color>
-    <color name="offwhite">#fff2f2f2</color>
     <color name="primary_dark_material_dark">@android:color/black</color>
     <color name="primary_dark_material_light">@color/material_grey_600</color>
     <color name="primary_material_dark">@color/material_grey_900</color>
@@ -88,9 +81,6 @@
     <color name="primary_text_default_material_light">#de000000</color>
     <color name="primary_text_disabled_material_dark">#4dffffff</color>
     <color name="primary_text_disabled_material_light">#39000000</color>
-    <color name="redDeep">#ffb42e35</color>
-    <color name="redLight">#ffe03943</color>
-    <color name="textBlack">#ff000000</color>
-    <color name="textWhite">#fffafafa</color>
-    <color name="white">#ffffffff</color>
+
+
 </resources>
